[tool.poetry]
name = "plotutils"
# Version isn't used when installing from GitHub, so we set it to 0:
version = "0"
description = "This is a collection of plotting utilities for use in Jupyter notebooks."
authors = ["Christian Weber <cwe@toi.no>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
# Add package dependencies here:
pandas = "^2.0.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"



[tool.poetry.group.dev.dependencies]
# Add package develoer dependencies here
ipython = "*"
ipykernel = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
